style(html): Terminando estilização da area de contatos recentes.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             <li class="icon-menu-lateral groups">
                 <i class="fa-solid fa-layer-group"></i>
             </li>
-            <li class="icon-menu-lateral meta">
-                <img src="./img/meta.png" alt="">
-            </li>
+            <div class="meta">
+                <li class="icon-menu-lateral meta">
+                    <img src="./img/meta.png" alt="">
+                </li>
+            </div>
         </ol>
         <div class="container-config-user">
             <i class="fa-solid fa-gear engrenagem"></i>
@@ -43,7 +45,7 @@
         <section class="conversas">
             <div class="container-header-conversas">
                 <div class="container-header-info">
-                    <span>Chats</span>
+                    <span>WhatsApp</span>
                     <div class="container-icons-header-info">
                         <i class="fa-solid fa-pen-to-square square-edit"></i>
                         <i class="fa-solid fa-grip-lines"></i>
@@ -68,7 +70,6 @@
                             What is this bruh?
                         </p>
                     </div>
-                    
                 </div>
                 <div class="container-conversa">
                     <div class="container-profile-img">
