--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script src="./app.js" defer></script>
     <title>WhatsApp</title>
 </head>
 <body>
@@ -36,7 +37,7 @@
         <div class="container-config-user">
             <i class="fa-solid fa-gear engrenagem"></i>
             <div class="profile-img">
-                <img src="./img/rudeus.jpg" alt="">
+                <img src="" alt="" id="profile-photo">
             </div>
         </div>
     </nav>
@@ -56,7 +57,7 @@
                     <i class="fa-solid fa-magnifying-glass lupa"></i>
                 </div>
             </div>
-            <div class="container-conversas">
+            <div class="container-conversas" id="container-conversas">
                 <div class="container-conversa">
                     <div class="container-profile-img">
                         <img src="./img/person.jpg" alt="">
@@ -104,6 +105,7 @@
                             
                         </div>
                     </div>
+
                     <div class="container-messages-contact">
                         <div class="container-message-contact">
                             
